<resources>
    <string name="app_name">Kotlin Material Design 7.0</string>
    <string name="error_server_msg">Server Error</string>
    <string name="error_msg">Error</string>
    <string name="reload_msg">Reload</string>
    <string name="error_empty_url_msg">Empty URL</string>
    <string name="error_request_msg">Request Error</string>
    <string name="pod_description">Picture of The Day</string>
    <string name="earth_description">Earth Photos</string>
    <string name="mars_description">Mars Rover Photos</string>
    <string name="settings_action_text">Settings</string>
    <string name="settings_theme_type_title">Choice Theme</string>
    <string name="settings_type_purple">Purple</string>
    <string name="settings_type_teal">Teal</string>
    <string name="settings_button_apply">Apply</string>
    <string name="pod_today">Today</string>
    <string name="pod_yesterday">Yesterday</string>
    <string name="pod_day_before_yesterday">Day before yesterday</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="dim">Width and height in degrees</string>
    <string name="earth_apply_action">Apply</string>
    <string name="mars_date_title">Earth date</string>
    <string name="about_action_text">About NASA</string>
    <string name="about_text">
        "The National Aeronautics and Space Administration is America’s civil space program and the "
        "global leader in space exploration. The agency has a diverse workforce of just under 18,000 "
        "civil servants, and works with many more U.S. contractors, academia, and international and "
        "commercial partners to explore, discover, and expand knowledge for the benefit of humanity. "
        "With an annual budget of $23.2 billion in Fiscal Year 2021, which is less than 0.5% of the "
        "overall U.S. federal budget, NASA supports more than 312,000 jobs across the United States, "
        "generating more than $64.3 billion in total economic output (Fiscal Year 2019).\n\n"

        "At its 20 centers and facilities across the country – and the only National Laboratory in "
        "space – NASA studies Earth, including its climate, our Sun, and our solar system and beyond. "
        "We conduct research, testing, and development to advance aeronautics, including electric "
        "propulsion and supersonic flight. We develop and fund space technologies that will enable "
        "future exploration and benefit life on Earth.\n\n"

        "NASA also leads a Moon to Mars exploration approach, which includes working with U.S. "
        "industry, international partners, and academia to develop new technology, and send science "
        "research and soon humans to explore the Moon on Artemis missions that will help prepare "
        "for human exploration of the Red Planet. In addition to those major missions, the agency "
        "shares what it learns so that its information can make life better for people worldwide. "
        "For example, companies use NASA discoveries and technologies to create new products for "
        "the public. To ensure future success for the agency and the nation, NASA also supports "
        "education efforts in STEM with an emphasis on increasing diversity in our future workforce.\n\n"
    </string>
    <string name="notes_action_text">Notes</string>
    <string name="notes_add_action_text">Add Note</string>
    <string name="notes_edit_action_text">Edit Note</string>
    <string name="notes_delete_action_text">Delete Note</string>
</resources>