<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="?attr/colorPrimary"
        android:padding="10dp"
        android:text="@string/settings_action_text"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/settings_theme_type_title"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RadioButton
            android:id="@+id/radio_button_purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_type_purple"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio_button_teal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_type_teal"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/settings_button_apply"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>