<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pod_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.pod.PODFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/pod_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <HorizontalScrollView
                android:id="@+id/day_chip_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/pod_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/day_chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:chipSpacingHorizontal="15dp"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/today_chip"
                        style="@style/ChipChoice"
                        android:text="@string/pod_today" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/yesterday_chip"
                        style="@style/ChipChoice"
                        android:text="@string/pod_yesterday" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/day_before_yesterday_chip"
                        style="@style/ChipChoice"
                        android:text="@string/pod_day_before_yesterday" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <dyachenko.kotlinmaterialdesign03.util.EquilateralImageView
                android:id="@+id/pod_image_view"
                style="@style/EquilateralImageView"
                android:contentDescription="@string/pod_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/day_chip_scroll"
                app:srcCompat="@drawable/ic_no_photo_vector" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/pod_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_anchor="@+id/pod_nested_scroll_view"
        app:layout_anchorGravity="center"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="?attr/colorPrimary" />
    </FrameLayout>

    <include layout="@layout/pod_bottom_sheet_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>